--- a/index.html
+++ b/index.html
@@ -2,23 +2,167 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT Garage</title>
     <style>
-        body { font-family: Arial; text-align: center; }
-        img { width: 300px; }
-        button { padding: 10px; background: #007bff; color: white; border: none; cursor: pointer; }
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #1a1a1a, #2c3e50);
+            color: #fff;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        h1 {
+            font-size: 3em;
+            margin: 40px 0;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            background: linear-gradient(to right, #00ffcc, #ff00cc);
+            -webkit-background-clip: text;
+            color: transparent;
+            animation: glow 2s ease-in-out infinite alternate;
+        }
+        @keyframes glow {
+            from { text-shadow: 0 0 10px #00ffcc, 0 0 20px #ff00cc; }
+            to { text-shadow: 0 0 20px #00ffcc, 0 0 30px #ff00cc; }
+        }
+        p.subtitle {
+            font-size: 1.2em;
+            margin-bottom: 30px;
+            opacity: 0.8;
+        }
+        .car-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            padding: 20px;
+        }
+        .car-card {
+            background: #2a2a2a;
+            border-radius: 15px;
+            width: 250px;
+            padding: 15px;
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+        }
+        .car-card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 10px 25px rgba(0, 255, 204, 0.5);
+        }
+        .car-card img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 10px;
+            margin-bottom: 10px;
+        }
+        .car-card h3 {
+            font-size: 1.5em;
+            margin: 10px 0;
+            color: #00ffcc;
+        }
+        .car-card p {
+            font-size: 1em;
+            margin: 5px 0;
+            color: #ccc;
+        }
+        .car-card .specs {
+            font-size: 0.9em;
+            color: #aaa;
+            margin: 5px 0;
+        }
+        .car-card button {
+            padding: 10px 20px;
+            background: transparent;
+            border: 2px solid #ff00cc;
+            color: #ff00cc;
+            font-size: 1em;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            margin-top: 10px;
+        }
+        .car-card button:hover {
+            background: #ff00cc;
+            color: #fff;
+            box-shadow: 0 0 15px #ff00cc;
+        }
+        a {
+            color: #00ffcc;
+            text-decoration: none;
+            margin: 20px 0;
+            font-size: 1.1em;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <h1>NFT Garage</h1>
-    <p>Collect and customize digital cars as NFTs!</p>
-    <h3>Subaru WRX</h3>
-    <img src="https://via.placeholder.com/300?text=Subaru+WRX" alt="Subaru WRX">
-    <p>Price: 20 Yoda</p>
-    <button onclick="alert('Connect MetaMask to buy!')">Buy</button>
-    <h3>Honda Civic</h3>
-    <img src="https://via.placeholder.com/300?text=Honda+Civic" alt="Honda Civic">
-    <p>Price: 15 Yoda</p>
-    <button onclick="alert('Connect MetaMask to buy!')">Buy</button>
+    <p class="subtitle">Collect and customize digital cars as NFTs!</p>
+    <div class="car-container">
+        <div class="car-card">
+            <img src="car images/civic.jpg" alt="Honda Civic">
+            <h3>Honda Civic</h3>
+            <p>Price: 15 Yoda</p>
+            <div class="specs">
+                <p>Paint: Metallic Grey</p>
+                <p>Engine: 1.5L Turbo</p>
+                <p>Horsepower: 174 HP</p>
+            </div>
+            <button onclick="alert('Connect MetaMask to buy!')">Buy</button>
+        </div>
+        <div class="car-card">
+            <img src="car images/subaru.jpg" alt="Subaru WRX">
+            <h3>Subaru WRX</h3>
+            <p>Price: 20 Yoda</p>
+            <div class="specs">
+                <p>Paint: Blue Mica</p>
+                <p>Engine: 2.5L Turbo</p>
+                <p>Horsepower: 271 HP</p>
+            </div>
+            <button onclick="alert('Connect MetaMask to buy!')">Buy</button>
+        </div>
+        <div class="car-card">
+            <img src="car images/lexus.jpg" alt="Lexus ES350">
+            <h3>Lexus ES350</h3>
+            <p>Price: 30 Yoda</p>
+            <div class="specs">
+                <p>Paint: Nebula Grey Pearl</p>
+                <p>Engine: 3.5L V6</p>
+                <p>Horsepower: 302 HP</p>
+            </div>
+            <button onclick="alert('Connect MetaMask to buy!')">Buy</button>
+        </div>
+        <div class="car-card">
+            <img src="car images/bmw.jpg" alt="BMW M4 Competition">
+            <h3>BMW M4 Competition</h3>
+            <p>Price: 45 Yoda</p>
+            <div class="specs">
+                <p>Paint: Frozen Deep Grey</p>
+                <p>Engine: 3.0L Twin-Turbo Inline-6</p>
+                <p>Horsepower: 503 HP</p>
+            </div>
+            <button onclick="alert('Connect MetaMask to buy!')">Buy</button>
+        </div>
+        <div class="car-card">
+            <img src="car images/audi.jpg" alt="Audi R8">
+            <h3>Audi R8</h3>
+            <p>Price: 60 Yoda</p>
+            <div class="specs">
+                <p>Paint: Midnight Blue</p>
+                <p>Engine: 5.2L V10</p>
+                <p>Horsepower: 562 HP</p>
+            </div>
+            <button onclick="alert('Connect MetaMask to buy!')">Buy</button>
+        </div>
+    </div>
 </body>
 </html>
