--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </div>
     <div class="car-container">
         <div class="car-card">
-            <img src="carimages/honda_civic.jpg" alt="Honda Civic">
+            <img src="/carimages/honda_civic.jpg" alt="Honda Civic">
             <h3>Honda Civic</h3>
             <p>Price: 15 Yoda</p>
             <div class="specs">
@@ -142,7 +142,7 @@
             <button onclick="buyCar(1, 15)">Buy</button>
         </div>
         <div class="car-card">
-            <img src="carimages/subaru_wrx.jpg" alt="Subaru WRX">
+            <img src="/carimages/subaru_wrx.jpg" alt="Subaru WRX">
             <h3>Subaru WRX</h3>
             <p>Price: 20 Yoda</p>
             <div class="specs">
@@ -153,7 +153,7 @@
             <button onclick="buyCar(2, 20)">Buy</button>
         </div>
         <div class="car-card">
-            <img src="carimages/lexus_es350.jpg" alt="Lexus ES350">
+            <img src="/carimages/lexus_es350.jpg" alt="Lexus ES350">
             <h3>Lexus ES350</h3>
             <p>Price: 30 Yoda</p>
             <div class="specs">
@@ -164,7 +164,7 @@
             <button onclick="buyCar(3, 30)">Buy</button>
         </div>
         <div class="car-card">
-            <img src="carimages/bmw_m4_comp.jpg" alt="BMW M4 Competition">
+            <img src="/carimages/bmw_m4_comp.jpg" alt="BMW M4 Competition">
             <h3>BMW M4 Competition</h3>
             <p>Price: 45 Yoda</p>
             <div class="specs">
@@ -175,7 +175,7 @@
             <button onclick="buyCar(4, 45)">Buy</button>
         </div>
         <div class="car-card">
-            <img src="carimages/audi_r8.jpg" alt="Audi R8">
+            <img src="/carimages/audi_r8.jpg" alt="Audi R8">
             <h3>Audi R8</h3>
             <p>Price: 60 Yoda</p>
             <div class="specs">
